k8s/dvr/overlays/bazarr-1080/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - bazarr-1080.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: bazarr-1080.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-1080-service
                port:
                  name: http
